# PROLAB

./: .dockerignore  .gitignore  Dockerfile  README.md  all_pdfs_text.txt  check_rmse.py  diagnose.py  docker-compose.yml  entrypoint.sh  generate_test_data.py  intro_text.txt  map.pgm  map.yaml  run_experiments.sh  run_three.sh  text.md
ProbRob_Paper_Template_Englisch/: IEEEtran.cls  ProbRob_Paper_Template_Englisch.bbl  ProbRob_Paper_Template_Englisch.blg  ProbRob_Paper_Template_Englisch.tex  refs.bib
data/: convergence.csv  delay_breakdown.csv
data/01_baseline/: evaluation_summary.csv
data/08_delay_100ms/: evaluation_summary.csv
data/09_delay_500ms/: evaluation_summary.csv
data/10_scurve/: evaluation_summary.csv
data/11_runtime/: evaluation_summary.csv
prol_filters/: CMakeLists.txt  package.xml
prol_filters/config/: filter_params.yaml  filters.rviz
prol_filters/include/prol_filters/: ekf.hpp  kalman_filter.hpp  particle_filter.hpp
prol_filters/launch/: experiment.launch.py  filters.launch.py  simulation.launch.py
prol_filters/map/: map.yaml
prol_filters/scripts/: animate_run.py  comparison_plot.py  convergence.py  delay_breakdown.py  delay_experiment.py  delay_trajectories.py  evaluate_filters.py  imu_simulator.py  kalman_gain_slalom.py  per_filter_plots.py  plot_comparison_gain.py  plot_localization.py  plot_results.py  qr_experiment.py  runtime_plot.py  trajectory_comparison.py  verify_alignment.py
prol_filters/src/: ekf_node.cpp  kalman_filter_node.cpp  map_publisher_node.cpp  particle_filter_node.cpp
